--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,5 @@
-<app-auth-form title="Login" (formSubmitted)="onLogin($event)"></app-auth-form>
+<app-auth-form
+  title="Login"
+  type="login"
+  (formSubmitted)="onLogin($event)"
+></app-auth-form>
