--- a/src/app/components/auth-form/auth-form.component.scss
+++ b/src/app/components/auth-form/auth-form.component.scss
@@ -23,6 +23,14 @@
       margin-bottom: 0.5rem;
     }
 
+    button {
+      margin-bottom: 1rem;
+    }
+
+    a.redirectLink {
+      font-size: 0.7rem;
+    }
+
     h2 {
       text-align: center;
       margin-bottom: 1rem;
