--- a/src/app/components/auth-form/auth-form.component.scss
+++ b/src/app/components/auth-form/auth-form.component.scss
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: calc(100% - 1rem);
+    margin: auto;
     padding: 2rem;
     max-width: 400px;
     border: 1px solid #ddd;
@@ -39,6 +40,10 @@
     > * {
       width: 70%;
       margin: auto;
+
+      @media screen and (max-width: 420px) {
+        width: 100%;
+      }
     }
   }
 }
