--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <router-outlet></router-outlet>
 
   <app-snackbar></app-snackbar>
+
+  <app-spinner-in-overlay></app-spinner-in-overlay>
 </ng-template>
 
 <app-app-bar [childTemplate]="childTemplate"></app-app-bar>
