Show all countries

--- a/src/app/components/app-bar/app-bar.component.html
+++ b/src/app/components/app-bar/app-bar.component.html
@@ -21,6 +21,9 @@
       >
         Register
       </button>
+      <button *ngIf="token" mat-raised-button color="accent">
+        Add Country
+      </button>
       <button
         *ngIf="token"
         mat-raised-button
