--- a/src/app/components/app-bar/app-bar.component.scss
+++ b/src/app/components/app-bar/app-bar.component.scss
@@ -1,9 +1,14 @@
 .toolbar {
   background-color: #222;
   color: #fff;
+  padding: 0.5rem 16px;
+  height: auto;
   display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 2rem;
 
   nav span {
     font-size: 0.9rem;
