--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="content">
+  <h1>Countries</h1>
+  <div class="countriesList">
+    <app-country-card
+      *ngFor="let country of countries"
+      [country]="country"
+    ></app-country-card>
+  </div>
+</div>
