Finish create country

--- a/src/app/components/app-bar/app-bar.component.html
+++ b/src/app/components/app-bar/app-bar.component.html
@@ -21,7 +21,7 @@
       >
         Register
       </button>
-      <button *ngIf="token" mat-raised-button color="accent">
+      <button *ngIf="token" mat-raised-button color="accent" routerLink="/new">
         Add Country
       </button>
       <button
