--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,11 +1,9 @@
-<div class="content">
-  <h1>Countries</h1>
-  <div class="countriesList">
-    <app-country-card
-      routerLink="/{{ country.name }}"
-      *ngFor="let country of countries"
-      [country]="country"
-      type="list"
-    ></app-country-card>
-  </div>
+<h1>Countries</h1>
+<div class="countriesList">
+  <app-country-card
+    routerLink="/details/{{ country.name }}"
+    *ngFor="let country of countries"
+    [country]="country"
+    type="list"
+  ></app-country-card>
 </div>
