--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/scss/forms";
 
 html,
 body {
@@ -12,6 +13,10 @@ body {
 
   * {
     box-sizing: border-box;
+  }
+
+  .pointer {
+    cursor: pointer;
   }
 
   .content {
