--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,9 +1,58 @@
 <h1>Countries</h1>
-<div class="countriesList">
+<div *ngIf="countries.length" class="countriesContainer">
+  <table
+    mat-table
+    [dataSource]="paginatedCountries"
+    class="mat-elevation-z8 countriesTable"
+  >
+    <mat-text-column headerText="Name" name="name"></mat-text-column>
+    <mat-text-column
+      headerText="Population"
+      name="population"
+    ></mat-text-column>
+    <mat-text-column
+      headerText="Number of states"
+      name="numberOfStates"
+    ></mat-text-column>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let country">
+        <button
+          class="blackBtn"
+          mat-raised-button
+          color="accent"
+          routerLink="/edit/{{ country.name }}"
+        >
+          Edit
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      class="pointer"
+      routerLink="/details/{{ row.name }}"
+      *matRowDef="let row; columns: displayedColumns"
+    ></tr>
+  </table>
+
+  <mat-paginator
+    hidePageSize
+    pageSize="10"
+    [pageIndex]="pageIndex"
+    [length]="countries.length"
+    (page)="onPageChange($event)"
+    aria-label="Select page of periodic elements"
+  >
+  </mat-paginator>
+</div>
+<!-- <div class="countriesList">
   <app-country-card
     routerLink="/details/{{ country.name }}"
     *ngFor="let country of countries"
     [country]="country"
     type="list"
   ></app-country-card>
-</div>
+</div> -->
