--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,19 +1,28 @@
 <h1>Countries</h1>
-<div *ngIf="dataSource" class="countriesContainer">
+<div *ngIf="dataSource?.filteredData?.length" class="countriesContainer">
   <table
     mat-table
+    matSort
     [dataSource]="dataSource"
     class="mat-elevation-z8 countriesTable"
   >
-    <mat-text-column headerText="Name" name="name"></mat-text-column>
-    <mat-text-column
-      headerText="Population"
-      name="population"
-    ></mat-text-column>
-    <mat-text-column
-      headerText="Number of states"
-      name="numberOfStates"
-    ></mat-text-column>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let country">{{ country.name }}</td>
+    </ng-container>
+    <!-- <mat-text-column headerText="Name" name="name"></mat-text-column> -->
+
+    <ng-container matColumnDef="population">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Population</th>
+      <td mat-cell *matCellDef="let country">{{ country.population }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="numberOfStates">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Number of states
+      </th>
+      <td mat-cell *matCellDef="let country">{{ country.numberOfStates }}</td>
+    </ng-container>
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
