Finish auth screens redesign

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<ng-template #childTemplate>
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
+<!-- <ng-template #childTemplate> -->
+<!-- <div class="content"> -->
+<router-outlet></router-outlet>
+<!-- </div> -->
 
-  <app-snackbar></app-snackbar>
+<app-snackbar></app-snackbar>
 
-  <app-spinner-in-overlay></app-spinner-in-overlay>
-</ng-template>
+<app-spinner-in-overlay></app-spinner-in-overlay>
+<!-- </ng-template> -->
 
-<app-app-bar [childTemplate]="childTemplate"></app-app-bar>
+<!-- <app-app-bar [childTemplate]="childTemplate"></app-app-bar> -->
