--- a/src/app/containers/login/login.component.html
+++ b/src/app/containers/login/login.component.html
@@ -1,5 +1,7 @@
-<app-auth-form
-  title="Login"
-  type="login"
-  (formSubmitted)="onLogin($event)"
-></app-auth-form>
+<app-auth-layout>
+  <app-auth-form
+    title="Login"
+    type="login"
+    (formSubmitted)="onLogin($event)"
+  ></app-auth-form>
+</app-auth-layout>
