--- a/src/app/containers/register/register.component.html
+++ b/src/app/containers/register/register.component.html
@@ -1,5 +1,7 @@
-<app-auth-form
-  title="Register"
-  type="register"
-  (formSubmitted)="onRegister($event)"
-></app-auth-form>
+<app-auth-layout>
+  <app-auth-form
+    title="Register"
+    type="register"
+    (formSubmitted)="onRegister($event)"
+  ></app-auth-form>
+</app-auth-layout>
