--- a/src/app/components/auth-form/auth-form.component.scss
+++ b/src/app/components/auth-form/auth-form.component.scss
@@ -1,1 +1,28 @@
+@import "../../../assets/scss/variables";
 
+.logo {
+  display: flex;
+  justify-content: center;
+
+  img {
+    position: relative;
+    left: 0.2rem;
+    width: 50px;
+    max-width: 100%;
+    height: 100%;
+  }
+}
+
+.redirectContainer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: center;
+  gap: 0.5rem;
+
+  a {
+    color: $mainColor;
+    text-decoration: none;
+    font-weight: 500;
+  }
+}
