--- a/src/app/components/country-card/country-card.component.scss
+++ b/src/app/components/country-card/country-card.component.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/scss/variables";
+
 .card {
   &.multiple {
     width: calc(100% / 3);
@@ -15,7 +17,7 @@
 
       .title {
         font-weight: bold;
-        color: #ff4081;
+        color: $mainColor;
       }
     }
   }
