--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -1,23 +1,35 @@
+@import "./variables";
+
 .formContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 
   .form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    margin: auto;
+    margin: 1rem auto;
     padding: 2rem;
     max-width: 400px;
     border: 1px solid #ddd;
     border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 3px 2px 5px 3px #3e3b3b5e;
 
     .error {
       color: rgba(240, 33, 33, 0.692);
+    }
+
+    .mat-form-field-wrapper {
+      padding-bottom: 1em;
+    }
+
+    .mat-form-field-subscript-wrapper {
+      top: 78%;
     }
 
     mat-form-field {
@@ -28,13 +40,9 @@
       margin-bottom: 1rem;
     }
 
-    a.redirectLink {
-      font-size: 0.7rem;
-    }
-
     h2 {
       text-align: center;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
     }
 
     > * {
