--- a/src/app/components/country-card/country-card.component.html
+++ b/src/app/components/country-card/country-card.component.html
@@ -16,7 +16,7 @@
     <button
       class="blackBtn"
       mat-raised-button
-      color="accent"
+      color="primary"
       routerLink="/edit/{{ country.name }}"
     >
       Edit
