--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -35,7 +35,7 @@
         <button
           class="blackBtn"
           mat-raised-button
-          color="accent"
+          color="primary"
           routerLink="/edit/{{ country.name }}"
         >
           Edit
@@ -63,11 +63,3 @@
   >
   </mat-paginator>
 </div>
-<!-- <div class="countriesList">
-  <app-country-card
-    routerLink="/details/{{ country.name }}"
-    *ngFor="let country of countries"
-    [country]="country"
-    type="list"
-  ></app-country-card>
-</div> -->
