--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ body {
 
   .content {
     width: 90%;
-    margin: auto;
+    margin: 2rem auto 1rem;
   }
 
   .custom-spinner-dialog .mat-dialog-container {
