--- a/src/app/components/country-card/country-card.component.scss
+++ b/src/app/components/country-card/country-card.component.scss
@@ -1,6 +1,8 @@
 @import "../../../assets/scss/variables";
 
 .card {
+  box-shadow: 0px 0px 7px 0px #3e3b3b5e;
+
   &.multiple {
     width: calc(100% / 3);
     min-width: 300px;
@@ -20,9 +22,5 @@
         color: $mainColor;
       }
     }
-  }
-
-  .blackBtn {
-    background-color: #222;
   }
 }
