--- a/src/app/components/country-form/country-form.component.html
+++ b/src/app/components/country-form/country-form.component.html
@@ -62,7 +62,7 @@
 
     <button
       mat-raised-button
-      color="accent"
+      color="primary"
       [disabled]="!countryForm.valid"
       type="submit"
     >
